--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -25,6 +25,17 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+                android:id="@+id/ivBack2"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginStart="16dp"
+                android:onClick="onClickBack"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/icon_white_left" />
+
+        <ImageView
             android:id="@+id/ivSetting"
             android:layout_width="22dp"
             android:layout_height="22dp"
